--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="link footer-contact" href="mailto:info@studio.com"
                 >info@studio.com</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="link footer-contact" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
