--- a/portfolio.html
+++ b/portfolio.html
@@ -219,7 +219,7 @@
         <a class="link logo footer-logo" href="./index.html" lang="en"
           ><span>Web</span>Studio</a
         >
-        <address class="link footer-address">
+        <address class="footer-address">
           <ul class="list footer-list">
             <li class="footer-item">
               <a
@@ -230,12 +230,12 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="link footer-contact" href="mailto:info@studio.com"
                 >info@studio.com</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="link footer-contact" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
